# algorithm_deploy

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DoClangFormat.py  DoClangTidy.py  README.md  commit_template.txt  run_pack_models.sh
cmake/common/: common_link.cmake  cpack.cmake  install_macro.cmake  platform.cmake
doc/parallel_task/: parallel.MD
doc/thread_pool/: thread_pool.MD
include/: autofollicle.h
kernel/: CMakeLists.txt  README.md
kernel/include/base/: common.h  error.h  glic_stl_include.h  logger.h  macros.h
kernel/include/core/: abstract_algorithm.h  abstract_param.h
kernel/include/dag/: common.h  edge.h  engine.h  graph.h  node.h  util.h
kernel/include/dag/edge/: abstract_edge.h  data_package.h  fixed_edge.h  pipeline_edge.h
kernel/include/dag/engine/: condition_engine.h  parallel_pipeline_engine.h  parallel_task_engine.h  sequential_engine.h
kernel/include/device/: abstract_context.h  abstract_device.h  device_utils.h
kernel/include/device/cpu/: cpu_device.h
kernel/include/device/cuda/: cuda_device.h  cuda_include.h
kernel/include/inference/: inference.h  inference_param.h
kernel/include/inference/mnn/: mnn_blob_converter.h  mnn_config_converter.h  mnn_include.h  mnn_network.h
kernel/include/inference/onnxruntime/: onnxruntime_config_converter.h  onnxruntime_include.h  onnxruntime_network.h
kernel/include/inference/openvino/: openvino_blob_converter.h  openvino_config_converter.h  openvino_include.h  openvino_network.h
kernel/include/inference/tensorrt/: tensorrt_common.h  tensorrt_config_converter.h  tensorrt_include.h  tensorrt_logger.h  tensorrt_network.h  tensorrt_timing_cache.h
kernel/include/memory_manager/: README.md  blob.h  buffer.h  buffer_v1.h  p_buffer.h
kernel/include/model/: model.h  model_include.h  model_manager.h
kernel/include/model/mnn/: mnn_model.h
kernel/include/model/onnx/: onnx_model.h
kernel/include/model/openvino/: openvino_model.h
kernel/include/op/: README.md
kernel/include/thread_pool/: local_thread.h  runnable_task.h  safe_ws_queue.h  thread_pool.h
kernel/include/utils/: blob_utils.h  debug_utils.h  device_convert_utils.h  file_utils.h  json_utils.h  memory_size_info.h  model.h  rapidjson_include.h  serialization_utils.h  time_profile.h  type_utils.h
kernel/include/utils/codec/: auto_crypto.h  codec_engine.h  codec_include.h  crypto_utils.h  model_codec.h  model_parse.h  model_serialize.h
kernel/src/base/: README.md  logger.cc
kernel/src/base/dag/: edge.cc  graph.cc  node.cc  util.cc
kernel/src/base/dag/edge/: abstract_edge.cc  data_package.cc  fixed_edge.cc  pipeline_edge.cc
kernel/src/base/dag/engine/: parallel_pipeline_engine.cc  parallel_task_engine.cc  sequential_engine.cc
kernel/src/dag/: edge.cc  graph.cc  node.cc  util.cc
kernel/src/dag/edge/: abstract_edge.cc  data_package.cc  fixed_edge.cc  pipeline_edge.cc
kernel/src/dag/engine/: parallel_pipeline_engine.cc  parallel_task_engine.cc  sequential_engine.cc
kernel/src/device/: abstract_device.cc
kernel/src/device/cpu/: cpu_device.cc
kernel/src/device/cuda/: cuda_device.cc
kernel/src/inference/: inference.cc
kernel/src/inference/mnn/: mnn_blob_converter.cc  mnn_config_converter.cc  mnn_network.cc
kernel/src/inference/onnxruntime/: onnxruntime_config_converter.cc  onnxruntime_network.cc
kernel/src/inference/openvino/: openvino_blob_converter.cc  openvino_config_converter.cc  openvino_network.cc
kernel/src/inference/tensorrt/: tensorrt_builder.cc  tensorrt_builder.h  tensorrt_config_converter.cc  tensorrt_logger.cc  tensorrt_network.cc  tensorrt_timing_cache.cc
kernel/src/memory_manager/: blob.cc  buffer.cc  p_buffer.cc
kernel/src/model/: model.cc  model_manager.cc
kernel/src/model/mnn/: mnn_model.cc
kernel/src/model/onnx/: onnx_model.cc
kernel/src/model/openvino/: openvino_model.cc
kernel/src/utils/: device_convert_utils.cc  json_utils.cc  kernel_file_utils.cc  serialization_utils.cc  time_profile.cc
kernel/src/utils/codec/: auto_crypto.cc  crypto_utils.cc  model_parse.cc
module/autofollicle_algorithm/: CMakeLists.txt  follicle.cc  follicle.h  public_follicle.cc
plugin/: CMakeLists.txt  README.md
plugin/cardiac_plugin/include/: sp_Infer.h
plugin/cardiac_plugin/src/: sp_infer.cc
plugin/classification/: CMakeLists.txt  classification.cc  classification.h  demo.cc  infer.cc  infer.h  preprocess.cc  preprocess.h
plugin/codec/: codec.cc  codec.h  opencv_codec.cc  opencv_codec.h
sample/: CMakeLists.txt  file_utils.h  img_classifier_demo.cc
sample2/: CMakeLists.txt
sample2/classification_sample/: CMakeLists.txt  README.md  img_classifier_demo.cc  sample_file_utils.h
sample2/dag_sample/: CMakeLists.txt  README.md  demo.cc  infer_plugin.h  postprocess_plugin.h  preprocess_plugin.h
script/: READNE.md  build.py
script/linux/: build.sh  build_linux.sh  build_linux_debug.sh  build_linux_publish.sh  build_linux_with_tools.sh  configure_ide.sh  lib_arg_parser.sh  run_pack_models.sh  run_sample.sh
script/windows/: build.ps1  build_msvc.bat  build_win_ci.bat  build_win_publish.bat  lib_arg_parser.ps1  run_pack_models.ps1  run_sample.ps1  test.bat  tnn_bat.txt
test/: CMakeLists.txt  main_test.cc
test/kernel_test/: blob_test.cc  buffer_test.cc  device_test.cc  inference_test.cc  util_test.cc
test/simple_test/: test.cc
test/source/: foll_agorithm_test.cc
tools/: CMakeLists.txt  check_code.py  format_code.py  lint_code.py  代码质量工具使用指南.md
tools/pack_models/: CMakeLists.txt  README.md
tools/pack_models/include/: cli_parser.h  model_packager.h  model_serializer.h
tools/pack_models/include/utils/: file_utils.h  model_parse_crypto.h  platform_utils.h
tools/pack_models/src/: cli_parser.cpp  main.cpp  model_packager.cpp  model_serializer.cpp
tools/pack_models/src/utils/: file_utils.cpp  model_parse_crypto.cpp  platform_utils.cpp
